Log viewer is now layered

--- a/MerlionServer/Web/Default.html
+++ b/MerlionServer/Web/Default.html
@@ -122,8 +122,9 @@
                             </label>
                         </div>
                     </form>
-                    <div id="log-view">
-
+                    <div id="log-view-wrapper">
+                        <div id="log-view">
+                        </div>
                     </div>
                 </div>
             </div>
